# contracts

./: .gitignore  Cargo.toml  LICENSE  README.md  index.ts  package.json
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  README_TEMPLATE.md  versioning.md
scripts/: check-bindings.mjs
src/: acquisition.rs  artists.rs  auth.rs  catalog.rs  directory.rs  discovery.rs  insights.rs  lib.rs  library.rs  lyrics.rs  manager.rs  overrides.rs  pins.rs  room.rs  scrobble.rs  smart.rs  social.rs  streaming.rs  suggestions.rs  user.rs
